--- a/api/build.gradle
+++ b/api/build.gradle
@@ -25,6 +25,7 @@ configurations {
 
 dependencies {
     compile 'javax.servlet:javax.servlet-api:3.1.0'
+    compile 'jstl:jstl:1.2'
     compile 'org.springframework.boot:spring-boot-autoconfigure:1.2.3.RELEASE'
     compile 'org.springframework.hateoas:spring-hateoas:0.19.0.RELEASE'
     compile 'org.springframework.security:spring-security-web:4.0.3.RELEASE'
@@ -34,10 +35,12 @@ dependencies {
     compile 'org.hibernate:hibernate-core:5.0.7.Final'
     compile 'org.hibernate:hibernate-entitymanager:5.0.7.Final'
     compile group: 'commons-logging', name: 'commons-logging', version: '1.2'
+    compile 'org.slf4j:slf4j-log4j12'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.6.4'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.6.4'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.6.4'
     compile 'javax.persistence:persistence-api:1.0.2'
-    compile 'org.hsqldb:hsqldb:2.3.3'
+    compile 'commons-dbcp:commons-dbcp:1.2.2'
+    compile 'mysql:mysql-connector-java:5.1.38'
     providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 }
